# aquarion-docs

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .readthedocs.yaml  .trivyignore.yaml  .yamlfmt.yaml  CHANGELOG.md  README.md  REUSE.toml  devbox.json  mkdocs.yml  project-words.txt  pyproject.toml
.github/workflows/: build.yml
docs/: architecture.md  changelog.md  component_designs.md  components.md  contributing.md  index.md  system_architectures.md
scripts/: check  clean  docs  init  report
